<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecorderFragment" >

    <TextView
        android:id="@+id/textview_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:gravity="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:gravity="center"
        android:padding="30dp" >

        <Button
            android:id="@+id/button_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_record"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_stop"
            android:visibility="gone" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2" >

            <Button
                android:id="@+id/button_playback"
                android:layout_rowSpan="2"
                android:layout_gravity="fill"
                android:text="@string/button_playback"
                android:visibility="gone" />
            <Button
                android:id="@+id/button_save"
                android:layout_gravity="fill"
                android:text="@string/button_save"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_gravity="fill"
                android:text="@string/button_cancel"
                android:visibility="gone" />
            
        </GridLayout>
    </FrameLayout>

</LinearLayout>
